Mise à jour du projet vers la 1.21.5