@@ -10,11 +10,24 @@ import net.minecraft.block.BlockState;
 import net.minecraft.client.network.ClientPlayerEntity;
 import net.minecraft.component.type.AttributeModifierSlot;
 import net.minecraft.entity.player.PlayerInventory;
+import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
+import net.minecraft.item.Items;
+import net.minecraft.screen.slot.SlotActionType;
 import net.minecraft.util.Identifier;
+import net.minecraft.util.collection.DefaultedList;
 import net.minecraft.world.GameMode;
 
 public class AutoToolHack extends Toggleable implements AttackBlockListener {
+
+    private static final List<Item> TOOLS = List.of(
+            Items.WOODEN_AXE, Items.WOODEN_SHOVEL, Items.WOODEN_PICKAXE, Items.WOODEN_HOE,
+            Items.STONE_AXE, Items.STONE_SHOVEL, Items.STONE_PICKAXE, Items.STONE_HOE,
+            Items.GOLDEN_AXE, Items.GOLDEN_SHOVEL, Items.GOLDEN_PICKAXE, Items.GOLDEN_HOE,
+            Items.IRON_AXE, Items.IRON_SHOVEL, Items.IRON_PICKAXE, Items.IRON_HOE,
+            Items.DIAMOND_AXE, Items.DIAMOND_SHOVEL, Items.DIAMOND_PICKAXE, Items.DIAMOND_HOE,
+            Items.NETHERITE_AXE, Items.NETHERITE_SHOVEL, Items.NETHERITE_PICKAXE, Items.NETHERITE_HOE
+    );
 
     private static double tmpEfficiency = 0;
 
@@ -41,18 +54,20 @@ public class AutoToolHack extends Toggleable implements AttackBlockListener {
         List<ItemStack> bestTools = new ArrayList<>();
         float bestMiningSpeed = 1;
 
-        for (int i = 0; i < inventory.main.size(); i++) {
-            if (inventory.main.get(i).isEmpty()) continue;
+        // TODO: don't select item if durability is low
+        // TODO: check if offhand item is selectable
+        for (int i = 0; i < inventory.getMainStacks().size(); i++) {
+            ItemStack itemStack = inventory.getMainStacks().get(i);
+            if (itemStack.isEmpty()) continue;
 
-            ItemStack item = inventory.main.get(i);
-            float miningSpeed = computeMiningSpeed(item, blockState);
+            float miningSpeed = computeMiningSpeed(itemStack, blockState);
 
             if (bestTools.isEmpty() || miningSpeed > bestMiningSpeed) {
                 bestTools.clear();
-                bestTools.add(item);
+                bestTools.add(itemStack);
                 bestMiningSpeed = miningSpeed;
             } else if (miningSpeed == bestMiningSpeed) {
-                bestTools.add(item);
+                bestTools.add(itemStack);
             }
         }
 
@@ -63,7 +78,7 @@ public class AutoToolHack extends Toggleable implements AttackBlockListener {
         }
 
         // If one of the best tools is already selected, return early
-        if (bestTools.contains(inventory.getMainHandStack())) {
+        if (bestTools.contains(inventory.getSelectedStack())) {
             return;
         }
 
@@ -71,14 +86,36 @@ public class AutoToolHack extends Toggleable implements AttackBlockListener {
         // if it is, select it and return early.
         for (int i = 0; i < 9; i++) {
             if (bestTools.contains(inventory.getStack(i))) {
-                inventory.selectedSlot = i;
+                inventory.setSelectedSlot(i);
                 return;
             }
         }
 
         // Pick one of the best tools from the inventory
-        int bestToolIndex = inventory.getSlotWithStack(bestTools.get(0));
-        PlaierClient.MC.getInteractionManager().pickFromInventory(bestToolIndex);
+        int bestToolIndex = inventory.getSlotWithStack(bestTools.getFirst());
+
+        int hotbarSlot;
+        if (inventory.getSelectedStack().isEmpty()) {
+            hotbarSlot = inventory.getSelectedSlot();
+        } else {
+            hotbarSlot = getSwappableHotbarSlot(inventory);
+            inventory.setSelectedSlot(hotbarSlot);
+        }
+
+        PlaierClient.MC.getInteractionManager().clickSlot(player.playerScreenHandler.syncId, bestToolIndex, hotbarSlot, SlotActionType.SWAP, player);
+    }
+
+    private static int getSwappableHotbarSlot(PlayerInventory inventory) {
+        DefaultedList<ItemStack> main = inventory.getMainStacks();
+        for (int i = 0; i < 9; i++) {
+            if (main.get(i).isEmpty()) return i;
+        }
+
+        for (int i = 0; i < 9; i++) {
+            if (TOOLS.contains(main.get(i).getItem())) return i;
+        }
+
+        return inventory.getSelectedSlot();
     }
 
     private static float computeMiningSpeed(ItemStack item, BlockState state) {
